update the ignore file

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "text-highlighter",
   "displayName": "Text Highlighter",
-  "icon": "project_icon.png",
+  "icon": "project_icon_small.jpg",
   "publisher": "tobiasorthproduction",
   "author": "Tobias Orth",
   "repository": {
